--- a/index.html
+++ b/index.html
@@ -5,33 +5,44 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
-<body>
-    <H1>
+<body>   
+  <div>
+  <H1>
         My Portfolio
     </H1>
-    <!-- 
-      Directions:
-        1. Create a DIV element to contain the page content
-        2. Inside your DIV, create an H1 tag that contains your name as the text
-        3. Below your H1 tag, create an H2 tag that contains the content text "Software Developer"
-        4. Below your H2 tag, create an HR tag which will make a horizontal line
-        5. Create a paragraph tag and put a sentence of your choice in it. (Suggestion: "My favorite thing about programming is _______")
-        6. Make the word "favorite" italicized
-        7. Make an image tag with the src attribute linked to a picture of yourself or of a placeholder image. Make sure you make an alt attribute too!
-        8. Create an H3 tag that says "About Me"
-        9. Create a paragraph tag that contains the "lorem ipsum" text. You will need to do a search for this text - it is long!
-        10. Create an H3 tag that says "My Projects"
-        11. Create an unordered list with 3 list items that say "Project 1", "Project 2", and "Project 3"
-        12. Add another H3 that contains "Contact Me" as text
-        13. Create a paragraph that contains a fake phone number, e.g., "Phone: (202) 555-1234"
-        14. Create a link tag (<a>) with a direction to mail to a fake email address. This is done by making a regular link, but in the href attribute, put mailto:fake@email.com (this opens up your email program with the TO field already filled out-try it!)
+  
+<h1>Yogi Zipori</h1>
+<h2>Software Developer</h2>
+<hr></hr>
+<p>My <em>favorite</em> thing about programming is to be a part of the future.</p>
+    
+<img src="images/yogi.jpeg" alt="Yogi Zipori" width="250" 
+height="250">
+ 
+<h3>About Me</h3>
+<p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
 
-        BONUS: Try one of the following ideas if you finish early
-          - Switch out your lorem ipsum for Hipster Ipsum (https://hipsum.co/)
-          - In your contact me section, make the text "Phone:" and "Email:" bolded
-     -->
-</body>
+
+<h3>My Projects</h3>
+<ul>
+  <li>Project 1</li>
+  <li>Project 2</li>
+  <li>Project 3</li>
+</ul>
+
+<h3>Contact Me</h3>
+
+<p><b>Phone:</b> (702) 556-1234</p>
+<p><b>Email:</b><a href = "mailto: fakeemail@gmail.com">Email Yogi</a></p>
+
+
+</div>
+
+
+  
+  </body>
 
 </html>
